infrastructure/crossplane/chart/templates/test/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute
  namespace: default
spec:
  parentRefs:
    - name: default-envoy-gateway
      sectionName: https
      namespace: envoy-gateway

  hostnames:
    - crossplane-app.wieman.cloud

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: my-app-dbbadb5108cb
          namespace: default
          port: 8080
